--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 jvmTarget=15
+# DONOT CHANGE WIHTOUT CHANGING GRADLE PLUGIN VERSION STRING
 projectVersion=1.5.31
 dokkaVersion=1.5.30
 kotlinVersion=1.5.31
